<resources>
    <string name="app_name">蓝牙工具</string>
    <string name="if_support_ble">设备是否支持BLE蓝牙:</string>
    <string name="bluetooth_open">设备蓝牙状态:</string>
    <string name="title">标题</string>
    <string name="about_our">关于我们</string>
    <string name="current_version">当前版本</string>
    <string name="search_bluetooth">蓝牙搜索</string>
    <string name="bluetooth_number">蓝牙设备数:</string>
    <string name="statues">状态: </string>
    <string name="disconnection">未连接</string>
    <string name="disconnect">断开连接</string>
    <string name="connection">已连接</string>
    <string name="connect">连接</string>
    <string name="connecting">正在连接...</string>
    <string name="select_write_character">点击选择可写服务</string>
    <string name="select_notify_character">点击选择可通知服务</string>
    <string name="select_read_character">点击选择可读服务</string>
    <string name="unknown_service">UnKnown service</string>
    <string name="unknown_characteristic">UnKnown characteristic</string>
    <string name="ble_device_disconnect">当前蓝牙已经断开</string>
    <string name="send">发送</string>
    <string name="send_loop">循环发送</string>
    <string name="input_command">点击输入命令</string>
    <string name="save_command">保存命令</string>
    <string name="no_command">当前没有命令</string>
    <string name="save_fail">保存失败</string>
    <string name="command_exist">命令已存在</string>
    <string name="no_select_character">请先选择对应特征</string>
    <string name="notify_opened">通知已打开</string>
    <string name="write_success">发送成功</string>
    <string name="write_fail">发送失败</string>
    <string name="output_format">输出格式:</string>
    <string name="no_input_command">请先输入命令</string>
    <string name="total_count">输出条目总量:</string>
    <string name="wipe_data">清空数据</string>
    <string name="export_text">导出文本</string>
    <string name="no_output_data">当前没有输入数据</string>
    <string name="permission_denied">授权失败</string>
    <string name="output_success">写入成功</string>
    <string name="search">搜索</string>
    <string name="not_translate">乱码不可转换</string>
    <string name="analysis_data">分析数据</string>
    <string name="database">数据库</string>
    <string name="callback_connect_open">回连打开</string>
    <string name="callback_connect_close">回连关闭</string>
    <string name="hint_circle_time">循环时间</string>
    <string name="ms">ms</string>
    <string name="input_circle_time">先输入循环间隔</string>
    <string name="stop_circle_send_first">请先停止循环发送命令</string>
    <string name="cancel_loop">取消循环</string>
    <string name="connect_fail">连接失败</string>
    <string name="convert">转换</string>
    <string name="capital">大写</string>
    <string name="time_change">时间</string>
    <string name="select_command_form_file">从文件中读取命令</string>
    <string name="private_string">私有</string>
    <string name="public_string">公有</string>

    <string name="rssi_model">信号值测试模式</string>
    <string name="normal_model">常用测试模式</string>


    <string name="explain_string">
        1.点击后从文件夹中选择命令导入数据库中\n2.私有不显示选择读写字段,公有显示读写字段
        \n3.常用模式下是正常测试，信号值模式下为信号值实时监听
    </string>
    <string name="dfu_update">OTA DFU 升级</string>
    <string name="device_name">设备名称:</string>
    <string name="device_address">设备地址:</string>
    <string name="select_dfu_file">选择升级文件</string>
    <string name="file_path_invalid">文件路径不存在</string>
    <string name="update_fail">升级失败</string>
    <string name="connection_status">连接状态:</string>
    <string name="rssi_test">蓝牙信号值监测</string>
    <string name="begin">开始</string>
    <string name="stop">停止</string>
</resources>
