<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bluetooth.ui.activity.RssiTestActivity">

    <com.kaha.bletools.framework.widget.CommonTopView
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:paddingStart="@dimen/darcy_10_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MAC: "
                android:textColor="@color/gray_888888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/darcy_4_dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:paddingStart="@dimen/darcy_10_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statues"
                android:textColor="@color/gray_888888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_statues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/darcy_4_dp"
                android:text="@string/disconnection"
                android:textColor="@color/red_ff4c4c"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/darcy_1_dp"
        android:background="@color/background" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_begin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/begin"
            android:visibility="gone" />

        <View
            android:layout_width="@dimen/darcy_1_dp"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/stop" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rssi_recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/darcy_30_dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_total_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/darcy_20_dp"
                android:text="0"
                android:textColor="@color/black_000000" />

        </RelativeLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_out_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/darcy_40_dp"
            android:layout_marginBottom="@dimen/darcy_80_dp"
            android:backgroundTint="@color/white"
            android:src="@mipmap/output" />

    </RelativeLayout>
</LinearLayout>
